# karatui

./: .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix  justfile  module.nix  package.nix
src/: api.rs  app.rs  conf.rs  main.rs
